--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 				<!-- ------------------------------------ -->
 				<div class="p_skill" id="skills">
-					<h2>Skis</h2>
+					<h2>Skigits</h2>
 					<ul>
 						<li>
 							<div class="sbox">
